--- a/design.css
+++ b/design.css
@@ -1,46 +1,59 @@
-*, *::after, *::before {
-    box-sizing: border-box;
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
 }
 
 body {
-    background: rgb(233, 169, 169);
-    font-family: fantasy;
-    padding: 16px;
+  background: rgb(233, 169, 169);
+  font-family: fantasy;
+  padding: 16px;
 }
 
 h1 {
-    font-family: sans-serif;
+  font-family: sans-serif;
+}
+ul {
+  list-style-type: none;
 }
 .cat {
-position: fixed;
-bottom: 0px;
-right: 0px;
-max-width: 120px;
-transform: scaleX(-100%)
+  position: fixed;
+  bottom: 0px;
+  right: 0px;
+  max-width: 120px;
+  transform: scaleX(-100%);
+  pointer-events: none;
 }
 
-@media screen and (min-width:768px) {
-
-    .cat {
-        max-width: 240px;
-    }
+@media screen and (min-width: 768px) {
+  .cat {
+    max-width: 240px;
+  }
 }
 
 .paper {
-    width: 100%;
-    max-width: 30ch;
-    min-height: 75vh;
-    background-color: rgb(241, 235, 235);
-    padding: 8px 16px;
-    border: 1px solid black;
-    border-radius: 16px;
-    box-shadow:
-  2.8px 2.8px 2.2px rgba(0, 0, 0, 0.02),
-  6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028),
-  12.5px 12.5px 10px rgba(0, 0, 0, 0.035),
-  22.3px 22.3px 17.9px rgba(0, 0, 0, 0.042),
-  41.8px 41.8px 33.4px rgba(0, 0, 0, 0.05),
-  100px 100px 80px rgba(0, 0, 0, 0.07)
-;
-
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 30ch;
+  min-height: 75vh;
+  background-color: rgb(241, 235, 235);
+  padding: 20px 16px;
+  border: 1px solid black;
+  border-radius: 16px;
+  box-shadow: 2.8px 2.8px 2.2px rgba(0, 0, 0, 0.02),
+    6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028),
+    12.5px 12.5px 10px rgba(0, 0, 0, 0.035),
+    22.3px 22.3px 17.9px rgba(0, 0, 0, 0.042),
+    41.8px 41.8px 33.4px rgba(0, 0, 0, 0.05),
+    100px 100px 80px rgba(0, 0, 0, 0.07);
+}
+.input-group {
+  margin-top: auto;
+  margin-bottom: 16px;
+  display: flex;
+  align-items: center;
+}
+.delete {
+  margin-left: 20px;
 }
